[project]
name = "lidar-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aky", email = "akiyugata271@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.11.0.86",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
